@@ -1,4 +1,4 @@
 [
     "http://betaradio.googlecode.com/svn/trunk/utils/hichannel.json",
-    "http://betaradio.googlecode.com/svn/trunk/utils/ptt.json"
+    "http://betaradio.googlecode.com/svn/trunk/utils/academic.json"
 ]
