@@ -1,12 +1,0 @@
-{
-	"title": "PTT Radio",
-	"url": "http://pttradio.net/",
-	"property": "channel",
-	"channel": [
-		{
-			"title": "PTTradio @ Taiwan",
-			"type": "mp3",
-			"url": "http://cast.ptt.cc:8000/yes"
-		}
-	]
-}
